--- a/flower_species_prediction/templates/index.html
+++ b/flower_species_prediction/templates/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html >
 <!--From https://codepen.io/frytyler/pen/EGdtg-->
+
 <head>
+<style>
+    body {
+    background-color: lightblue;
+    }
+    
+    h1 {
+    color: red;
+    text-align: center;
+    font-size: 50px;
+    }
+    
+    p {
+    font-family: verdana;
+    font-size: 20px;
+    }
+    blink {
+    color: #1c87c9;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    }    
+</style>
   <meta charset="UTF-8">
-  <title>Flower species Prediction</title>
+  <title>ML API</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
@@ -13,7 +36,10 @@
 
 <body>
  <div class="login">
-	<h1>Flower species Prediction</h1>
+	<a href="mailto:soni.pankajkumar@gmail.com target="_top">Email</a>
+        <h1>  Flower species Prediction </h1>
+        <blink> Flower species Prediction </blink>
+        
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
